# bookcatalog

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  implementer.agent.md  investigator.agent.md  planner.agent.md  security-auditor.agent.md
.github/hooks/: copilot-policy.json
.github/hooks/scripts/: post-commit-lint.ps1  post-commit-lint.sh  pre-tool-policy.ps1  pre-tool-policy.sh
.github/instructions/: architecture.instructions.md  documentation.instructions.md  python.instructions.md  security.instructions.md  tests.instructions.md
.github/prompts/: add-tests.prompt.md  debug-investigation.prompt.md  security-review.prompt.md
.github/skills/book-research/: SKILL.md
.github/skills/investigation-debugging/: SKILL.md
bookcatalog/: __init__.py
bookcatalog/agents/: __init__.py  config.py  preprocessor.py  tools.py  vision.py
bookcatalog/api/: __init__.py  main.py
bookcatalog/mcp/: __init__.py  book_search.py  sample_server.py
bookcatalog/research/: __init__.py  exceptions.py  local_search.py  models.py  openlibrary.py  preprocessing.py  product_filter.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
scripts/: Setup-BookCatalog.ps1  Start-DevServer.ps1  benchmark_matcher.py  build_openlibrary_db.py  download_openlibrary.py
tests/: conftest.py  test_agent_tools.py  test_api_agents.py  test_config.py  test_editions.py  test_mcp_book_search.py  test_preprocessor.py  test_product_filter.py  test_vision.py
(+17 files in other folders)
